updated the code to add a welcome message to the root URL
